ecommerse-nodejs-client-master/ecommerse-nodejs-client-master/k8-manifests/New folder/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerse-ui
  namespace: staging
  labels:
    app.kubernetes.io/name: ecommerse-ui
    app.kubernetes.io/instance: ecommerse-ui
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
#    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: ecommerse-ui
  ports:
    - port: 80
      targetPort: 80
